# CalculatorTheGameSolver

./: .gitmodules  CMakeLists.txt  README.md
launcher/: CMakeLists.txt  Main.cpp
solver/: CMakeLists.txt
solver/src/: CommandException.h  ConsoleInterface.h  Task.h
src/: CMakeLists.txt  CommandException.cpp  CommandException.h  ConsoleInterface.cpp  ConsoleInterface.h  CtgSolver.cpp  Main.cpp  OperationParams.cpp  OperationParams.h  Operations.cpp  Operations.h  Solver.cpp  Solver.h  Task.cpp  Task.h  Utils.cpp  Utils.h
src/include/: CtgSolver.h
tests/: CMakeLists.txt  OperationsTest.cpp  SolverTest.cpp  UtilsTest.cpp
vs_project/: solver.sln  solver.vcxproj  solver.vcxproj.filters
